force-app/main/default/objects/Product_Geo_Mapping__mdt/Product_Geo_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Product Geo Mapping</label>
    <pluralLabel>Product Geo Mappings</pluralLabel>
</CustomObject>