force-app/main/default/objects/Product_Geo_Mapping__mdt/fields/Permissible_Fly_Zone__c.field-meta.xml
<CustomField>
    <fullName>Permissible_Fly_Zone__c</fullName>
    <label>Permissible Fly Zone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>